styles/styles.css
@font-face {
  font-family: "pt sans";
  font-style: normal;
  font-weight: 400;
  src: url(../fonts/ptsans-400.woff2) format("woff2");
  font-display: swap;
}

@font-face {
  font-family: "pt sans";
  font-style: normal;
  font-weight: 700;
  src: url(../fonts/ptsans-700.woff2) format("woff2");
  font-display: swap;
}

html {
  height: 100%;
}

:focus {
  outline: none;
  box-shadow: 0 0 1px rgba(255, 255, 0, 0.7);
}

body {
  margin: auto;
  display: flex;
  flex-direction: column;
  min-height: 100%;
  font-family: "pt sans", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  width: 1200px;
  padding: 0;
}

.main-container {
  flex-grow: 1;
}

.visually_hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.header_container {
  width: 1200px;
  display: flex;
  margin: 0, auto;
  padding: 0;
  align-items: center;
}

.logo_container {
  width: 140px;
  margin-left: 70px;
  margin-right: 28px;
  margin-bottom: -10px;
  z-index: 1;
}

.header_navigation {
  width: 339px;
  display: flex;
  padding: 0;
  justify-content: center;
  margin-right: 287px;
}

.header_link_container {
  padding: 20px 16px 20px 16px;
}

.user_menu_container {
  width: 268px;
  display: flex;
  align-items: center;
  margin-right: 60px;
}

.search_container {
  margin-left: 10px;
  margin-top: 2px;
}

.favorite_container {
  margin-left: 27px;
  margin-top: 5px;
}

.want_it_container {
  margin-left: 33px;
}

.user_menu_icon {
  fill: rgba(0, 0, 0, 1);
}

.user_menu_link {
  position: relative;
}

.favorite_circle {
  position: absolute;
  display: flex;
  left: 7px;
  top: -13px;
  background-color: rgba(125, 181, 79, 1);
  width: 20px;
  height: 20px;
  border: none;
  border-radius: 50%;
  content: "12";
  font-family: "pt sans", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 10px;
  line-height: 10px;
  color: rgba(255, 255, 255, 1);
  justify-content: center;
  align-items: center;
}

.header_link {
  font-family: "pt sans", sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 20px;
  line-height: 24px;
  color: rgba(0, 0, 0, 1);
  text-decoration: none;
}

.header_link:hover {
  font-family: "pt sans", sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 20px;
  line-height: 24px;
  color: rgba(0, 0, 0, 1);
  text-decoration: none;
  opacity: 60%;
}

.header_link:focus {
  font-family: "pt sans", sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 20px;
  line-height: 24px;
  color: rgba(0, 0, 0, 1);
  text-decoration: none;
  background-color: rgba(131, 179, 211, 1);
  border-radius: 4px;
}

.header_link:active {
  font-family: "pt sans", sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 20px;
  line-height: 24px;
  color: rgba(0, 0, 0, 1);
  text-decoration: none;
  opacity: 30%;
  background-color: rgba(255, 255, 255, 1);
}

.maim_element {
  position: relative;
}

.main_element::before {
  position: absolute;
  width: 68px;
  height: 2px;
  background-color: rgba(117, 98, 87, 1);
  top: 62px;
  content: "";
}

.user_menu_link:hover {
  opacity: 60%;
}

.user_menu_link:focus {
  background-color: rgba(131, 179, 211, 1);
  border-radius: 4px;
}

.user_menu_link:active {
  opacity: 30%;
  background-color: rgba(255, 255, 255, 1);
}

.want_it {
  display: block;
  width: 160px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "pt sans", sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 16px;
  line-height: 20px;
}

.brown_button {
  color: rgba(255, 255, 255, 1);
  background-color: rgba(117, 97, 87, 1);
  border: none;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
}

.brown_button:hover {
  color: rgba(255, 255, 255, 1);
  background-color: rgba(97, 80, 72, 1);
  border: none;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
}

.brown_button:focus {
  color: rgba(255, 255, 255, 1);
  background-color: rgba(97, 80, 72, 1);
  border: none;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
}

.brown_button:active {
  color: rgba(255, 255, 255, 0.3);
  background-color: rgba(117, 97, 87, 1);
  border: none;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
}

.brown_button:disabled {
  color: rgba(255, 255, 255, 1);
  background-color: rgba(229, 229, 229, 1);
  border: none;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
}

.blue_button {
  color: rgba(255, 255, 255, 1);
  background-color: rgba(130, 179, 211, 1);
  border: none;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
}

.blue_button:hover {
  color: rgba(255, 255, 255, 1);
  background-color: rgba(104, 162, 202, 1);
  border: none;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
}

.blue_button:focus {
  color: rgba(255, 255, 255, 1);
  background-color: rgba(104, 162, 202, 1);
  border: none;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
}

.blue_button:active {
  color: rgba(255, 255, 255, 0.3);
  background-color: rgba(130, 179, 211, 1);
  border: none;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
}

.blue_button:disabled {
  color: rgba(255, 255, 255, 1);
  background-color: rgba(229, 229, 229, 1);
  border: none;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
}

.green_button {
  color: rgba(255, 255, 255, 1);
  background-color: rgba(125, 181, 79, 1);
  border: none;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
}
/* ... */

